# backtest

./: .coverage  .env  .gitignore  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  AGENT.md  AUDIT_FINDINGS_2026-01-20.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_PROMPT.md  FRAMEWORK_VALIDATION_REPORT.md  HONEST_ENGINE_COMPARISON.md  HONEST_STATUS.md  LIMITATIONS.md  PRODUCTION_READINESS_SPEC.md  README.md  REPOSITORY_AUDIT.md  TASK-INT-010-COMPLETION.md  api.yaml  backtest.xml  benchmark.prof  code_review_package.txt  coverage.json  framework_comparison_results.json  mkdocs.yml  ml4t-backtest-review.xml  pyproject.toml  qengine-review.md  repomix.config.json  repomix.xml
.claude/: PROJECT_GUIDELINES.md  (+8 more)
resources/vectorbt.pro-main/: .gitignore  Dockerfile.dev  Dockerfile.jupyter  LICENSE  README.md  pyproject.toml
resources/vectorbt.pro-main/.devcontainer/: devcontainer.json
resources/vectorbt.pro-main/notebooks/: CrossValidation.ipynb  MTFAnalysis.ipynb  PQN_MTF.ipynb  PQN_ParamCV.ipynb  PQN_Patterns.ipynb  PQN_Projections.ipynb  PatternsProjections.ipynb  QQ_DiscretionarySignals.ipynb  SignalDevelopment.ipynb  StopSignals.ipynb  SuperTrend.ipynb  TelegramSignals.ipynb
resources/vectorbt.pro-main/scripts/: build_wheel.sh
resources/vectorbt.pro-main/tests/: test_ca_registry.py  test_data.py  test_indicators.py  test_jit_registry.py  test_labels.py  test_ohlcv.py  test_records.py  test_returns.py  test_settings.py  test_signals.py  test_utils.py
resources/vectorbt.pro-main/tests/test_base/: test_accessors.py  test_combining.py  test_grouping.py  test_indexing.py  test_resampling.py  test_reshaping.py  test_wrapping.py
resources/vectorbt.pro-main/tests/test_generic/: test_generic.py  test_patterns.py  test_plotting.py  test_splitting.py
resources/vectorbt.pro-main/tests/test_portfolio/: test_analysis.py  test_core.py  test_from_order_func.py  test_from_orders.py  test_from_signals.py  test_pfopt.py
resources/vectorbt.pro-main/vectorbtpro/: __init__.py  _dtypes.py  _opt_deps.py  _settings.py  _typing.py  _version.py  accessors.py  mcp_server.py
resources/vectorbt.pro-main/vectorbtpro/base/: __init__.py  accessors.py  chunking.py  combining.py  decorators.py  flex_indexing.py  indexes.py  indexing.py  merging.py  preparing.py  reshaping.py  wrapping.py
resources/vectorbt.pro-main/vectorbtpro/base/grouping/: __init__.py  base.py  nb.py
resources/vectorbt.pro-main/vectorbtpro/base/resampling/: __init__.py  base.py  nb.py
resources/vectorbt.pro-main/vectorbtpro/data/: __init__.py  base.py  decorators.py  nb.py  saver.py  updater.py
resources/vectorbt.pro-main/vectorbtpro/data/custom/: __init__.py  alpaca.py  av.py  bento.py  binance.py  ccxt.py  csv.py  custom.py  db.py  duckdb.py  feather.py  file.py  finpy.py  gbm.py  gbm_ohlc.py  hdf.py  local.py  ndl.py  parquet.py  polygon.py  random.py  random_ohlc.py  remote.py  sql.py  synthetic.py  tv.py  yf.py
resources/vectorbt.pro-main/vectorbtpro/generic/: __init__.py  accessors.py  analyzable.py  decorators.py  drawdowns.py  enums.py  plots_builder.py  plotting.py  price_records.py  ranges.py  sim_range.py  stats_builder.py
resources/vectorbt.pro-main/vectorbtpro/generic/nb/: __init__.py  apply_reduce.py  base.py  iter_.py  patterns.py  records.py  rolling.py  sim_range.py
resources/vectorbt.pro-main/vectorbtpro/generic/splitting/: __init__.py  base.py  decorators.py  nb.py  purged.py  sklearn_.py
resources/vectorbt.pro-main/vectorbtpro/indicators/: __init__.py  configs.py  enums.py  expr.py  factory.py  nb.py  talib_.py
resources/vectorbt.pro-main/vectorbtpro/indicators/custom/: __init__.py  adx.py  atr.py  bbands.py  hurst.py  ma.py  macd.py  msd.py  obv.py  ols.py  patsim.py  pivotinfo.py  rsi.py  sigdet.py  stoch.py  supertrend.py  vwap.py
resources/vectorbt.pro-main/vectorbtpro/labels/: __init__.py  enums.py  nb.py
resources/vectorbt.pro-main/vectorbtpro/labels/generators/: __init__.py  bolb.py  fixlb.py  fmax.py  fmean.py  fmin.py  fstd.py  meanlb.py  pivotlb.py  trendlb.py
resources/vectorbt.pro-main/vectorbtpro/ohlcv/: __init__.py  accessors.py  enums.py  nb.py
resources/vectorbt.pro-main/vectorbtpro/portfolio/: __init__.py  base.py  call_seq.py  chunking.py  decorators.py  enums.py  logs.py  orders.py  preparing.py  trades.py
resources/vectorbt.pro-main/vectorbtpro/portfolio/nb/: __init__.py  analysis.py  core.py  ctx_helpers.py  from_order_func.py  from_orders.py  from_signals.py  iter_.py  records.py
resources/vectorbt.pro-main/vectorbtpro/portfolio/pfopt/: __init__.py  base.py  nb.py  records.py
resources/vectorbt.pro-main/vectorbtpro/px/: __init__.py  accessors.py  decorators.py
resources/vectorbt.pro-main/vectorbtpro/records/: __init__.py  base.py  chunking.py  col_mapper.py  decorators.py  mapped_array.py  nb.py
resources/vectorbt.pro-main/vectorbtpro/registries/: __init__.py  ca_registry.py  ch_registry.py  jit_registry.py  pbar_registry.py
resources/vectorbt.pro-main/vectorbtpro/returns/: __init__.py  accessors.py  enums.py  nb.py  qs_adapter.py
resources/vectorbt.pro-main/vectorbtpro/signals/: __init__.py  accessors.py  enums.py  factory.py  nb.py
resources/vectorbt.pro-main/vectorbtpro/signals/generators/: __init__.py  ohlcstcx.py  ohlcstx.py  rand.py  randnx.py  randx.py  rprob.py  rprobcx.py  rprobnx.py  rprobx.py  stcx.py  stx.py
resources/vectorbt.pro-main/vectorbtpro/utils/: __init__.py  annotations.py  array_.py  attr_.py  base.py  caching.py  chaining.py  checks.py  chunking.py  colors.py  config.py  datetime_.py  datetime_nb.py  decorators.py  enum_.py  eval_.py  execution.py  figure.py  formatting.py  hashing.py  image_.py  jitting.py  magic_decorators.py  mapping.py  math_.py  merging.py  module_.py  params.py  parsing.py  path_.py  pbar.py  pickling.py  profiling.py  random_.py  requests_.py  schedule_.py  search_.py  selection.py  source.py  tagging.py  (+3 more)
resources/vectorbt.pro-main/vectorbtpro/utils/knowledge/: __init__.py  asset_pipelines.py  base_asset_funcs.py  base_assets.py  chatting.py  custom_asset_funcs.py  custom_assets.py  formatting.py
(+1965 files in other folders)
